--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <button>Add</button>
         </form>
 
-        <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+        <a href="https://omolara5861.github.io">Laradev</a>
     </footer>
 
     <script type="module" src="app.js"></script>
