feat: :sparkles: update index file

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TypeScript Tutorial</title>
+    <title>TypeScript Finace Logger</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -39,7 +39,7 @@
             <button>Add</button>
         </form>
 
-        <a href="https://omolara5861.github.io">Laradev</a>
+        <a href="https://omolara5861.github.io" target="_blank">Laradev</a>
     </footer>
 
     <script type="module" src="app.js"></script>
