feat: :sparkles: Add new class

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <ul class="item-list"></ul>
     </div>
 
-    <footer>
+    <footer class="box">
         <form class="new-item-form">
             <div class="field">
                 <label>Type:</label>
